--- a/React/package.json
+++ b/React/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "amazon-cognito-identity-js": "^5.2.8",
+    "aws-sdk": "^2.1122.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
