--- a/Express/package.json
+++ b/Express/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "aws-sdk": "^2.1119.0",
     "bcrypt": "^5.0.1",
     "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
@@ -22,6 +23,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
-    "mongoose": "^6.2.10"
+    "fs": "^0.0.1-security",
+    "mongoose": "^6.2.10",
+    "multer": "^1.4.4"
   }
 }
