--- a/React/package.json
+++ b/React/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "amazon-cognito-identity-js": "^5.2.8",
     "aws-sdk": "^2.1122.0",
+    "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
