--- a/React/package.json
+++ b/React/package.json
@@ -10,6 +10,10 @@
     "amazon-cognito-identity-js": "^5.2.8",
     "aws-sdk": "^2.1122.0",
     "axios": "^0.27.2",
+    "axios-stream": "^1.0.17",
+    "downloadjs": "^1.4.7",
+    "fs": "^0.0.1-security",
+    "nanoid": "^3.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
