--- a/Express/package.json
+++ b/Express/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
     "aws-sdk": "^2.1119.0",
@@ -25,6 +26,9 @@
     "express-session": "^1.17.2",
     "fs": "^0.0.1-security",
     "mongoose": "^6.2.10",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.19.0"
   }
 }
