--- a/Express/package.json
+++ b/Express/package.json
@@ -25,10 +25,12 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "fs": "^0.0.1-security",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.2.10",
     "multer": "^1.4.4",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
+    "request": "^2.88.2",
     "sequelize": "^6.19.0"
   }
 }
