--- a/Express/package.json
+++ b/Express/package.json
@@ -16,7 +16,8 @@
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
-    "aws-sdk": "^2.1119.0",
+    "amazon-cognito-identity-js": "^5.2.8",
+    "aws-sdk": "^2.1125.0",
     "bcrypt": "^5.0.1",
     "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
