--- a/Express/package.json
+++ b/Express/package.json
@@ -29,6 +29,7 @@
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.2.10",
     "multer": "^1.4.4",
+    "nanoid": "^3.3.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "request": "^2.88.2",
