--- a/React/package.json
+++ b/React/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -10,6 +12,7 @@
     "amazon-cognito-identity-js": "^5.2.8",
     "aws-sdk": "^2.1122.0",
     "axios": "^0.27.2",
+    "flowbite": "^1.4.4",
     "nanoid": "^3.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -43,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24"
   }
 }
